k8s/bazarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr:development-version-v0.9.3@sha256:c3818eb138a69f8b58950a5fcb030affe2c1be38e053f1a13bd995c5df75c7b7
          ports:
            - name: bazarr
              containerPort: 6767
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: bazarr
            - name: media
              mountPath: /tv
              subPath: TV
            - name: media
              mountPath: /movies
              subPath: Movies
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: media
          persistentVolumeClaim:
            claimName: media
