k8s/bazarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("bazarr.mchill.io")
      kind: Rule
      services:
        - name: bazarr
          port: 6767
